# python-package-template

./: .gitignore  .ignore_words.txt  .markdownlint.yaml  .pre-commit-config.yaml  .prettierrc  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  cliff.toml  commitlint.config.js  cspell.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml  renovate.json  setup_repo.sh  zensical.toml
.github/: dependabot.yml  template-sync.yml
.github/workflows/: CI.yml  ci.yml  codeql.yml  create_tag.yml  documentation.yml  draft_release.yml  publish.example.yml  publish.yml  publish_testpypi.yml  release.yml  schedule-update-actions.yml  scheduled_release.yml  semantic_pull_request.yml  sphinx.yml  support_floor_update.yml
docs/: gen_ref_pages.py  index.md  pylint.md
docs/api/: hello_world.md  index.md
docs/api/utils/: index.md  log.md
docs/dev/: changelog.md  code_quality.md  troubleshooting.md
docs/javascripts/: mathjax.js
docs/style/: api.css
docs/template_documentation/: index.md
docs/template_documentation/development/: changelog.md  code_quality.md  troubleshooting.md
docs/template_documentation/onboarding/: customize_repository.md  index.md  quick_start.md
docs/template_documentation/user_guide/: ci_cd.md  customization.md  development_tools.md  documentation.md  installation.md  packaging.md  project_structure.md  quick_start.md
docs/user_guide/: ci_cd.md  customization.md  development_tools.md  documentation.md  installation.md  packaging.md  project_structure.md  quick_start.md  testing.md
src/package_name/: version.py
src/python_package_template/: __init__.py  __main__.py  hello_world.py  version.py
src/python_package_template/cli/: __init__.py  hello.py  main.py
src/python_package_template/utils/: __init__.py  log.py
tests/: conftest.py  smoke_test.py  test_hello_world.py  test_import.py  test_methods.py
